<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterAuthPhoneCodeFragment">

    <ImageView
        android:id="@+id/auth_passcode_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:contentDescription="@string/cd_auth_btn_next"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_passcode_top_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_small_margin"
        android:gravity="center"
        android:text="@string/auth_passcode_top_label"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_passcode_pic" />

    <TextView
        android:id="@+id/auth_passcode_mid_label"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_small_margin"
        android:gravity="center"
        android:text="@string/auth_passcode_mid_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_passcode_top_label" />

    <EditText
        android:id="@+id/auth_input_passCode_EditText"
        style="@style/auth_edit_ext"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:hint="@string/auth_passcode_enterCode_hint"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_passcode_mid_label" />

</androidx.constraintlayout.widget.ConstraintLayout>